tests/baselines/reference/emitArrowFunctionWhenUsingArguments11_ES6(strict=true).errors.txt
emitArrowFunctionWhenUsingArguments11_ES6.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments11_ES6.ts(1,12): error TS7006: Parameter 'arguments' implicitly has an 'any' type.


==== emitArrowFunctionWhenUsingArguments11_ES6.ts (2 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
               ~~~~~~~~~
!!! error TS7006: Parameter 'arguments' implicitly has an 'any' type.
        var _arguments = 10;
        var a = () => () => arguments;
    }